Version 1.4.1 - xx xxx 2009

  * Add "make uninstall" feature. Ticket #121.
  * Configure is using --L with ANTLR lib. Ticket #122.
  * Add configurable RestrictedIndicator with example
    Search program. Ticket #123.
  * Move GetObjectRequest::GetIgnoreMalformedHeaders
    documentation to Maintainer mode. Ticket #126.

Version 1.4.0 - 12 Oct 2009

  * Bundle MSVCPxx.DLL with the Windows Ruby build.
  * Support the UPDATE transaction. Ticket #55.
  * Throw exceptoin if missing leading or trailing tab
    in COMPACT format. Ticket #89.
  * Handle malformed multi-part response if enabled.
    Ticket #112.
  * Add GetForeignKeys() to RetsMetadata. Ticket #115.
  * Correct case on Zend/zend.h in configure. Ticket #116.
  * Add SetRestrictedIndicator to SearchRequest. Ticket #117.
  * Add SetWildIndicator and GetWildIndicator to ObjectDescriptor.
    Ticket #118.
  * Expose ObjectDescriptor::GetRetsReplyCode and GetRetsReplyText
    to SWIG languages. Ticket #119.
  * Detect antlr libraries only if the antlr program eixsts.
    Ticket #120.

Version 1.3.3 - 15 Jul 2009
  
  * SWIG 1.3.39 uses feature Generics for C# and Mono MCS
    doesn't handle that. Ticket #109.
  * Update demo programs to reflect new demo server defaults.
    Ticket #110.
  * SWIG fails to properly compile polymorphic GetMetadata and
    Search for PHP. Disable those APIs. Ticket #111.

Version 1.3.2 - 05 Jun 2009

  * Clean up autoconf warnings. Enable -fPIC as default.
  * Attempt to detect Java Home. Ticket #83.
  * Check for SWIG dependent language headers before 
    enabling that language. Ticket #88.
  * Ruby exceptions are cryptic. Ticket #96.
  * Add PERL to "make install". Ticket #103.
  * Clean up g++ deprecation warnings. Ticket #104.
  * Make default encoding ISO. Ticket #105.
  * Properly detect boost versioned libraries on OS X. 
    Ticket #106
  * Clean up memory leaks. Ticket #107.

Version 1.3.1 - 18 Mar 2009

  * Expose RetsVersionToString to SWIG languages. Ticket #92.